--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mfm-js",
-  "version": "0.24.0",
+  "version": "0.24.0+neko",
   "description": "An MFM parser implementation with TypeScript",
   "main": "./built/index.js",
   "types": "./built/index.d.ts",
@@ -41,6 +41,5 @@
   "files": [
     "built",
     "CHANGELOG.md"
-  ],
-  "packageManager": "pnpm@9.6.0+sha512.38dc6fba8dba35b39340b9700112c2fe1e12f10b17134715a4aa98ccf7bb035e76fd981cf0bb384dfa98f8d6af5481c2bef2f4266a24bfa20c34eb7147ce0b5e"
+  ]
 }
